--- a/package.json
+++ b/package.json
@@ -24,17 +24,27 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.1.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/jwt": "^8.0.0",
+    "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.1.5",
     "@nestjs/typeorm": "^8.0.2",
+    "chalk": "^4.1.2",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.2",
+    "log4js": "^6.3.0",
+    "moment": "^2.29.1",
     "mysql2": "^2.3.3",
+    "passport": "^0.5.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "stacktrace-js": "^2.0.2",
     "swagger-ui-express": "^4.1.6",
-    "typeorm": "^0.2.41"
+    "typeorm": "^0.2.41",
+    "util": "^0.12.4"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
